[package]
name = "constr"
version = "0.0.1"
edition = "2021"

[lib]
proc-macro = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[dependencies]
proc-macro2 = {version = "1.0.78", features = ["span-locations"]} # So good they needed a second one
quote = "1.0.35"
syn = "2.0.48"
